--- a/index.html
+++ b/index.html
@@ -140,6 +140,53 @@
     </div><!-- end container-->
   </section>
 
+  <!-- 브랜드 추천 -->
+  <section id="brand">
+    <div class="container"><!-- end container -->
+      <h2>브랜드 추천</h2>
+      <ul>
+        <li>
+          <!-- 이미지는 배경으로 처리 -->
+          <a href="#">
+            <span class="title">Laurel</span>
+            <i class="far fa-heart"></i>
+            <ul class="hash_tag">
+              <li>#크림스킨</li>
+              <li>#굿모닝 피부</li>
+              <li>#블랙쿠션</li>
+              <li>#럭셔리</li>
+            </ul>
+          </a>
+        </li>
+        <li>
+          <!-- 이미지는 배경으로 처리 -->
+          <a href="#">
+            <span class="title">Laurel</span>
+            <i class="far fa-heart"></i>
+            <ul class="hash_tag">
+              <li>#크림스킨</li>
+              <li>#굿모닝 피부</li>
+              <li>#블랙쿠션</li>
+              <li>#럭셔리</li>
+            </ul>
+          </a>
+        </li>
+        <li>
+          <!-- 이미지는 배경으로 처리 -->
+          <a href="#">
+            <span class="title">Laurel</span>
+            <i class="far fa-heart"></i>
+            <ul class="hash_tag">
+              <li>#크림스킨</li>
+              <li>#굿모닝 피부</li>
+              <li>#블랙쿠션</li>
+              <li>#럭셔리</li>
+            </ul>
+          </a>
+        </li>
+      </ul>
+    </div><!-- end container -->
+  </section>
 
 </body>
 </html>
