메인배너 배경 높이값 고정 & 위치 중앙 고정
- 매인베너 배경 높이값 고정 & 위치 중앙 고정
- 인디케이터 위치 조정

--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
 
   <!-- 메인 배너 -->
   <section id="main_banner">
-    <div class="bx-slider">
-      <img class="img_responsive1" src="images/main_banner01.jpg" alt="1" title="여기에 배너 설명글을 작성">
-      <img class="img_responsive1" src="http://placeimg.com/1920/400/2" alt="2">
-      <img class="img_responsive1" src="http://placeimg.com/1920/400/3" alt="3">
-    </div>
+    <div class="inner">
+      <div class="bx-slider">
+        <img class="img_responsive" src="images/main_banner01.jpg" alt="1" title="여기에 배너 설명글을 작성">
+        <img class="img_responsive" src="http://placeimg.com/1920/400/2" alt="2">
+        <img class="img_responsive" src="http://placeimg.com/1920/400/3" alt="3">
+      </div>
+    </div><!-- end inner -->
   </section>
 
   <!-- 메인 콘텐츠 -->
@@ -133,9 +135,6 @@
             <ins class="sale_price"><strong>214,800원</strong></ins>
           </a>
         </li>
-
-
-
       </ul>
     </div><!-- end container-->
   </section>
