--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
   <section id="top_seller">
     <div class="container"><!-- end container-->
       <h2>TOP SELLER</h2>
+      <div class="category_menu">
+        <a href="#" class="btn_all">ALL</a>
+        <a href="#" class="btn_woman">WOMAN</a>
+        <a href="#" class="btn_man">MAN</a>
+      </div>
       <ul class="item_list">
         <!-- 여기에 자바스크립트로 상품목록 추가됨 -->
         <!-- 225 x 323 -->
