--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
   <!-- 메인 콘텐츠 -->
   <section id="top_seller">
-    <div class="container"><!-- end container-->
+    <div class="container">
       <h2>TOP SELLER</h2>
       <div class="category_menu">
         <a href="#" class="all">ALL</a>
@@ -122,6 +122,20 @@
             <ins class="sale_price"><strong>214,800원</strong></ins>
           </a>
         </li> -->
+      </ul>
+    </div><!-- end container-->
+  </section>
+
+  <section id="new_product">
+    <div class="container">
+      <h2>NEW PRODUCT</h2>
+      <!-- <div class="category_menu">
+        <a href="#" class="all">ALL</a>
+        <a href="#" class="woman">WOMAN</a>
+        <a href="#" class="man">MAN</a>
+      </div> -->
+      <ul class="item_list">
+        <!-- 여기에 자바스크립트로 상품목록 추가됨 -->
       </ul>
     </div><!-- end container-->
   </section>
